# sdk-picar-ros

./: CMakeLists.txt  README.md  package.xml
documentation/: export.sh  index.md  utilisation_donnees_publish_subscribe.md
launch/: keyboard_publisher.launch
scripts/picar-4wd/: setup.py
scripts/picar-4wd/picar_4wd/: motor.py  pwm.py
scripts/sdk_picar_ros/: DESCRIPTION.rst  __init__.py  keyboard_publisher.py  listener.py  setup.py  speed_angle_control.py
scripts/sdk_picar_ros/test/: test_speed_functions.py  test_wheel_rotation.py
